# CMake-Default

./: .gitignore  CMakeLists.txt  README.md
apps/: calc.cpp  draft.py
binL/: app
src/: calc.cpp
utils/: nPow.cpp  nRoot.cpp
